# kindle-web

./: Cargo.toml
src/: api.rs  config.rs  main.rs
static/: index.html  style.css
static/kindle/: index.html  style.css
