[package]
name = "kindle-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
toml = "0.8.16"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
csv = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
