[package]
name = "kindle-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
toml = "0.8.16"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
csv = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
